# bomboni

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  develop.sh  flake.nix  justfile  tool.sh
bomboni/: Cargo.toml  build.rs
bomboni/proto/google/protobuf/: descriptor.proto  duration.proto  empty.proto  timestamp.proto  wrappers.proto
bomboni/proto/google/rpc/: error_details.proto
bomboni/src/: lib.rs
bomboni/src/macros/: collections.rs  mod.rs
bomboni/src/proto/: error.rs  google.protobuf.plus.rs  google.protobuf.rs  google.rpc.plus.rs  google.rpc.rs  mod.rs  serde_helpers.rs
bomboni/src/proto/google/: any.rs  duration.rs  empty.rs  field_mask.rs  mod.rs  status.rs  timestamp.rs  wrappers.rs
bomboni/src/request/: mod.rs  resource.rs  schema.rs  value.rs
bomboni/src/request/filter/: error.rs  mod.rs
bomboni/src/request/ordering/: mod.rs
bomboni/src/testing/: schema.rs
bomboni/tests/proto/: fd.pb  tools.command.plus.rs  tools.command.rs  tools.perms.plus.rs  tools.perms.rs  tools.plus.rs  tools.proto  tools.rs
bomboni/tests/proto/command/: command.proto
bomboni_common/: Cargo.toml  README.md
bomboni_common/src/: date_time.rs  lib.rs
bomboni_common/src/date_time/: mod.rs  mysql.rs  postgres.rs
bomboni_common/src/id/: generator.rs  mod.rs  mysql.rs  postgres.rs  worker.rs
bomboni_common/src/macros/: collections.rs  mod.rs
bomboni_core/: Cargo.toml  README.md
bomboni_core/src/: lib.rs  string.rs  syn.rs
bomboni_derive/: Cargo.toml
bomboni_derive/src/: lib.rs  utility.rs
bomboni_fs/: Cargo.toml  README.md
bomboni_fs/src/: lib.rs
bomboni_macros/: Cargo.toml  README.md
bomboni_macros/src/: collections.rs  lib.rs
bomboni_prost/: Cargo.toml  README.md
bomboni_prost/src/: config.rs  context.rs  enums.rs  helpers.rs  lib.rs  messages.rs  oneofs.rs  path_map.rs  utility.rs
bomboni_proto/: Cargo.toml  README.md  build.rs
bomboni_proto/proto/google/api/: http.proto
bomboni_proto/proto/google/protobuf/: any.proto  descriptor.proto  field_mask.proto
bomboni_proto/proto/google/rpc/: error_details.proto
bomboni_proto/src/: .gitignore  fd.pb  lib.rs
bomboni_proto/src/google/: mod.rs
bomboni_proto/src/google/protobuf/: any.rs  duration.rs  empty.rs  field_mask.rs  mod.rs  timestamp.rs
bomboni_proto/src/google/rpc/: mod.rs  status.rs
bomboni_proto/src/protobuf/: any.rs  duration.rs  empty.rs  field_mask.rs  mod.rs  struct_value.rs  timestamp.rs  wrappers.rs
bomboni_proto/src/rpc/: code.rs  mod.rs  status.rs
bomboni_proto/src/serde/: helpers.rs  mod.rs
bomboni_proto/tests/: prost.rs
bomboni_proto/tests/proto/: .gitignore  tools.proto
bomboni_proto/tests/proto/command/: command.proto
bomboni_proto/tests/proto/command/v1/: command.proto
bomboni_proto/tests/proto/perms/: perms.proto
bomboni_request/: Cargo.toml  README.md
bomboni_request/src/: error.rs  lib.rs  mod.rs  resource.rs  schema.rs  string.rs  value.rs
bomboni_request/src/filter/: error.rs  grammar.pest  mod.rs
bomboni_request/src/ordering/: error.rs  mod.rs
bomboni_request/src/parse/: helpers.rs  mod.rs
bomboni_request/src/query/: error.rs  list.rs  mod.rs  search.rs  utility.rs
bomboni_request/src/query/page_token/: aes256.rs  base64.rs  mod.rs  plain.rs  rsa.rs  utility.rs
bomboni_request/src/sql/: filter.rs  mod.rs  ordering.rs  query.rs  utility.rs
bomboni_request/src/testing/: mod.rs  schema.rs
bomboni_request_derive/: Cargo.toml  README.md
bomboni_request_derive/src/: lib.rs  parse.rs  parse_into_map.rs  parse_message.rs  parse_oneof.rs  parse_resource_name.rs  utility.rs
bomboni_request_derive/src/parse/: derived_map.rs  field_type_info.rs  mod.rs  options.rs  parse_into_map.rs  parse_resource_name.rs  parse_serde.rs  parse_utility.rs  serde.rs  write_utility.rs
bomboni_request_derive/src/parse/message/: mod.rs  parse.rs  utility.rs  write.rs
bomboni_request_derive/src/parse/oneof/: mod.rs  parse.rs  utility.rs  write.rs
bomboni_serde/: Cargo.toml  README.md
bomboni_serde/src/: lib.rs
bomboni_template/: Cargo.toml  README.md
bomboni_template/src/: lib.rs
bomboni_template/src/helpers/: math.rs  mod.rs  render.rs  string.rs  switch.rs  utility.rs  value.rs
bomboni_wasm/: Cargo.toml  README.md
bomboni_wasm/src/: lib.rs  macros.rs
bomboni_wasm_core/: Cargo.toml  README.md
bomboni_wasm_core/src/: lib.rs  options.rs  ts_decl.rs  ts_type.rs
bomboni_wasm_derive/: Cargo.toml  README.md
bomboni_wasm_derive/src/: lib.rs  newtype.rs  wasm.rs
examples/grpc/bookstore/bookstore-api/: Cargo.toml  build.rs
examples/grpc/bookstore/bookstore-api/proto/v1/: auth_resources.proto  auth_service.proto  author_resources.proto  author_service.proto  book_resources.proto  book_service.proto
examples/grpc/bookstore/bookstore-api/src/: lib.rs
examples/grpc/bookstore/bookstore-api/src/client/: mod.rs
examples/grpc/bookstore/bookstore-api/src/model/: auth.rs  auth_service.rs  author.rs  author_service.rs  book.rs  book_service.rs  error.rs  mod.rs
examples/grpc/bookstore/bookstore-cli/: Cargo.toml  smoke-test.sh
examples/grpc/bookstore/bookstore-cli/src/: main.rs
examples/grpc/bookstore/bookstore-service/: Cargo.toml  README.md
examples/grpc/bookstore/bookstore-service/config/: default.toml  local.toml
examples/grpc/bookstore/bookstore-service/src/: config.rs  error.rs  lib.rs  main.rs
examples/grpc/bookstore/bookstore-service/src/author/: adapter.rs  create_author_command.rs  delete_author_command.rs  mod.rs  query_manager.rs  update_author_command.rs
examples/grpc/bookstore/bookstore-service/src/book/: adapter.rs  create_book_command.rs  delete_book_command.rs  mod.rs  (+2 more)
examples/grpc/grpc-common/: Cargo.toml  build.rs
examples/grpc/grpc-common/proto/common/: access_token.proto  error.proto
examples/grpc/grpc-common/proto/errors/: error.proto
examples/grpc/grpc-common/src/: lib.rs
examples/grpc/grpc-common/src/auth/: access_token.rs  authenticator.rs  context.rs  jwt_authenticator.rs  memory.rs  mod.rs
wasm/: Cargo.toml  develop.sh
wasm/bindings/: Item.ts
wasm/src/: bench.rs  lib.rs
(+31 files in other folders)
