[workspace]
resolver = "3"
members = [
  "bomboni_common",
  "bomboni_core",
  "bomboni_fs",
  "bomboni_macros",
  "bomboni_prost",
  "bomboni_proto",
  "bomboni_request",
  "bomboni_request_derive",
  "bomboni_template",
  "bomboni_wasm",
  "bomboni_wasm_core",
  "bomboni_wasm_derive",
  "examples/grpc/bookstore/bookstore-api",
  "examples/grpc/bookstore/bookstore-service",
]
exclude = ["integrations"]

[workspace.package]
version = "0.2.0"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Utility Library for Rust"
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "LICENSE"
edition = "2024"

[workspace.dependencies]
thiserror = "2.0.17"
regex = "1.12.2"
time = "0.3.44"
chrono = "0.4.42"
ulid = "1.2.1"
bytes = "1.10.1"
serde = "1.0.228"
serde_json = "1.0.145"
serde_derive_internals = "0.29.1"
convert_case = "0.9.0"
handlebars = "6.3.2"
rand = "0.9.2"
rand_core = "0.9.3"
itertools = "0.14.0"

http = "1.3.1"
hyper = "1.7.0"
prost = "0.14.1"
prost-types = "0.14.1"
prost-build = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tokio = "1.48.0"
async-trait = "0.1.89"
postgres-types = "0.2.11"
mysql_common = "0.35.5"

proc-macro2 = "1.0.103"
syn = "2.0.109"
quote = "1.0.42"
prettyplease = "0.2.37"
darling = "0.21.3"

uuid = "1.18"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = "4.5"
anyhow = "1.0"

[package]
name = "bomboni"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license-file.workspace = true
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni"
path = "src/lib.rs"

[features]
derive = ["bomboni_request/derive", "bomboni_wasm/derive"]
prost = ["dep:bomboni_prost"]
proto = ["prost", "dep:bomboni_proto"]
request = ["dep:bomboni_request"]
template = ["dep:bomboni_template"]
serde = ["bomboni_common/serde"]
chrono = ["bomboni_proto/chrono"]
tokio = ["bomboni_common/tokio"]
tonic = ["bomboni_proto/tonic", "bomboni_request/tonic"]
wasm = [
  "dep:bomboni_wasm",
  "bomboni_common/wasm",
  "bomboni_proto/wasm",
  "bomboni_request/wasm",
]
js = ["bomboni_common/js", "bomboni_proto/js", "bomboni_wasm/js"]
fs = ["dep:bomboni_fs"]
postgres = ["bomboni_common/postgres", "bomboni_request/postgres"]
mysql = ["bomboni_common/mysql", "bomboni_request/mysql"]

[dependencies]
bomboni_common = { path = "bomboni_common" }

bomboni_prost = { path = "bomboni_prost", optional = true }
bomboni_proto = { path = "bomboni_proto", optional = true }
bomboni_request = { path = "bomboni_request", features = ["root-crate"], optional = true }
bomboni_template = { path = "bomboni_template", optional = true }
bomboni_wasm = { path = "bomboni_wasm", features = ["root-crate"], optional = true }
bomboni_fs = { path = "bomboni_fs", optional = true }
