[package]
name = "bomboni"
version = "0.1.2"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Common utilities for Rust"
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni"
path = "src/lib.rs"

[features]
default = ["macros", "request"]
macros = ["dep:bomboni_derive", "dep:regex"]
request = []

[dependencies]
bomboni_derive = { version = "*", path = "../bomboni_derive", optional = true }
regex = { version = "1.10.2", optional = true }

[dev-dependencies]
bomboni_derive = { path = "../bomboni_derive" }
