[package]
name = "bomboni"
version = "0.1.2"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Utility Library for Rust"
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni"
path = "src/lib.rs"

[features]
default = ["macros", "request", "proto"]
macros = ["dep:bomboni_derive", "dep:regex"]
request = ["dep:pest", "dep:pest_derive"]
proto = ["dep:bomboni_prost", "dep:serde", "dep:serde_json"]
testing = ["dep:bomboni_prost", "dep:prost"]

[dependencies]
itertools = "0.11.0"
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0.50"

bomboni_derive = { version = "*", path = "../bomboni_derive", optional = true }
bomboni_prost = { version = "*", path = "../bomboni_prost", optional = true }
regex = { version = "1.10.2", optional = true }
pest = { version = "2.7.5", optional = true }
pest_derive = { version = "2.7.5", optional = true }
prost = { version = "0.12.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
bomboni_derive = { path = "../bomboni_derive" }
bomboni_prost = { path = "../bomboni_prost" }

[build-dependencies]
bomboni_prost = { path = "../bomboni_prost" }
prost-build = "0.12.1"
