[package]
name = "bomboni_common"
version = "0.1.61"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Common things for Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_common"
path = "src/lib.rs"

[features]
serde = ["dep:serde"]
tokio = ["dep:tokio", "dep:parking_lot"]
chrono = ["dep:chrono"]
wasm = [
  "dep:bomboni_wasm",
  "dep:js-sys",
  "dep:wasm-bindgen",
  "time/wasm-bindgen",
]
js = []
postgres = ["dep:postgres-types", "dep:bytes"]

[dependencies]
bomboni_wasm = { workspace = true, features = ["derive"], optional = true }

thiserror.workspace = true
regex.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
ulid.workspace = true

tokio = { workspace = true, features = ["time", "sync"], optional = true }
parking_lot = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
chrono = { workspace = true, optional = true }
postgres-types = { workspace = true, features = [
  "with-time-0_3",
], optional = true }
bytes = { workspace = true, optional = true }

[target.'cfg(all(target_family = "wasm", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
wasm-bindgen = { version = "0.2.93", optional = true }
js-sys = { version = "0.3.70", optional = true }

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
