[package]
name = "bomboni_common"
version.workspace = true
authors.workspace = true
description = "Common things for Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni_common"
path = "src/lib.rs"

[features]
serde = ["dep:serde"]
tokio = ["dep:tokio"]
chrono = ["dep:chrono"]
wasm = [
  "dep:bomboni_wasm",
  "dep:js-sys",
  "dep:wasm-bindgen",
  "time/wasm-bindgen",
  "dep:getrandom",
  "serde",
]
js = []
postgres = ["dep:postgres-types", "dep:bytes"]
mysql = ["dep:mysql_common"]

[dependencies]
bomboni_wasm = { path = "../bomboni_wasm", features = ["derive"], optional = true }

thiserror.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
ulid.workspace = true
getrandom = { version = "0.3.4", features = ["wasm_js"], optional = true }

tokio = { workspace = true, features = ["time", "sync"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
chrono = { workspace = true, optional = true }
postgres-types = { workspace = true, features = [
  "with-time-0_3",
], optional = true }
bytes = { workspace = true, optional = true }
mysql_common = { workspace = true, features = ["time"], optional = true }

[target.'cfg(all(target_family = "wasm", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
wasm-bindgen = { version = "0.2.105", optional = true }
js-sys = { version = "0.3.82", optional = true }

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
