[package]
name = "bomboni_core"
version = "0.1.60"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Internal part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_core"
path = "src/lib.rs"

[dependencies]
convert_case.workspace = true
proc-macro2.workspace = true
syn = { workspace = true, features = ["full"] }
quote.workspace = true
