[package]
name = "bomboni_core"
version.workspace = true
authors.workspace = true
description = "Internal part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni_core"
path = "src/lib.rs"

[dependencies]
convert_case.workspace = true
syn = { workspace = true, features = ["full"] }
