[package]
name = "bomboni_derive"
version = "0.1.2"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Macros for Bomboni library"
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.69", features = ["proc-macro"] }
syn = "2.0.39"
quote = "1.0.33"
darling = "0.20.3"
