[package]
name = "bomboni_fs"
version = "0.2.0"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Utilites for working with the file system. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition = "2024"

[lib]
name = "bomboni_fs"
path = "src/lib.rs"
