[package]
name = "bomboni_fs"
version.workspace = true
authors.workspace = true
description = "Utilites for working with the file system. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni_fs"
path = "src/lib.rs"
