[package]
name = "bomboni_macros"
version = "0.2.0"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Common macros for Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition = "2024"

[dev-dependencies]
regex.workspace = true
