[package]
name = "bomboni_prost"
version = "0.1.62"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Utilities for working with prost. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_prost"
path = "src/lib.rs"

[dependencies]
bomboni_core = { workspace = true }

prost.workspace = true
prost-types.workspace = true
proc-macro2.workspace = true
syn = { workspace = true, features = ["full"] }
quote.workspace = true
prettyplease.workspace = true
