[package]
name = "bomboni_prost"
version.workspace = true
authors.workspace = true
description = "Utilities for working with prost. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni_prost"
path = "src/lib.rs"

[dependencies]
bomboni_core = { workspace = true }

prost.workspace = true
prost-types.workspace = true
proc-macro2.workspace = true
syn = { workspace = true, features = ["full"] }
quote.workspace = true
prettyplease.workspace = true
