[package]
name = "bomboni_proto"
version = "0.1.61"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Utilities for working with Protobuf/gRPC. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_proto"
path = "src/lib.rs"

[features]
default = ["testing"]
testing = []
tonic = ["dep:tonic", "dep:http"]
chrono = ["dep:chrono", "bomboni_common/chrono"]
wasm = [
  "bomboni_common/wasm",
  "dep:wasm-bindgen",
  "dep:js-sys",
  "dep:serde-wasm-bindgen",
  "dep:bomboni_wasm",
]
js = ["bomboni_common/js"]

[dependencies]
bomboni_common = { workspace = true, features = ["serde"] }

thiserror.workspace = true
time = { workspace = true, features = ["serde", "formatting", "parsing"] }
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
pot = "3.0.1"

tonic = { workspace = true, optional = true }
http = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[target.'cfg(all(target_family = "wasm", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
bomboni_wasm = { workspace = true, optional = true, features = ["derive"] }

wasm-bindgen = { version = "0.2.93", optional = true }
js-sys = { version = "0.3.70", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

[dev-dependencies]
serde_json.workspace = true

[build-dependencies]
bomboni_prost = { workspace = true }
prost-build.workspace = true
