[package]
name = "bomboni_proto"
version.workspace = true
authors.workspace = true
description = "Utilities for working with Protobuf/gRPC. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni_proto"
path = "src/lib.rs"

[features]
testing = []
tonic = ["dep:tonic", "dep:http"]
chrono = ["dep:chrono"]
wasm = [
  "bomboni_common/wasm",
  "dep:wasm-bindgen",
  "dep:js-sys",
  "dep:serde-wasm-bindgen",
  "dep:bomboni_wasm",
]
js = ["bomboni_common/js"]

[dependencies]
bomboni_common = { workspace = true, features = ["serde"] }

thiserror.workspace = true
time.workspace = true
prost.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
pot = "3.0.1"

tonic = { workspace = true, optional = true }
http = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[target.'cfg(all(target_family = "wasm", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
bomboni_wasm = { workspace = true, optional = true, features = ["derive"] }

wasm-bindgen = { version = "0.2.108", optional = true }
js-sys = { version = "0.3.85", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

[dev-dependencies]

[build-dependencies]
prost-build.workspace = true
bomboni_prost = { workspace = true }
