[package]
name = "bomboni_request"
version = "0.1.62"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Utilities for working with API requests. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_request"
path = "src/lib.rs"

[features]
default = ["testing"]
root-crate = ["bomboni_request_derive/root-crate"]
testing = []
derive = []
tonic = ["bomboni_proto/tonic", "dep:tonic"]
wasm = [
  "dep:bomboni_wasm",
  "bomboni_common/wasm",
  "bomboni_proto/wasm",
  "dep:wasm-bindgen",
  "dep:js-sys",
  "dep:getrandom",
]
postgres = ["dep:postgres-types", "dep:bytes"]

[dependencies]
bomboni_common = { workspace = true }
bomboni_proto = { workspace = true }
bomboni_request_derive = { workspace = true }
bomboni_wasm = { workspace = true, features = ["derive"], optional = true }

thiserror.workspace = true
prost.workspace = true
rand.workspace = true
regex.workspace = true
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
pest = "2.7.14"
pest_derive = "2.7.14"
base64ct = { version = "1.6.0", features = ["alloc"] }
aes-gcm = { version = "0.10.3", features = ["alloc"] }
blake2 = "0.10.6"
rsa = "0.9.7"

tonic = { workspace = true, optional = true }
postgres-types = { workspace = true, features = [
  "with-time-0_3",
], optional = true }
bytes = { workspace = true, optional = true }
getrandom = { version = "0.2.15", features = ["js"], optional = true }

[target.'cfg(all(target_family = "wasm", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
wasm-bindgen = { version = "0.2.97", optional = true }
js-sys = { version = "0.3.74", optional = true }

[dev-dependencies]
serde_json.workspace = true
