[package]
name = "bomboni_request"
version.workspace = true
authors.workspace = true
description = "Utilities for working with API requests. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni_request"
path = "src/lib.rs"

[features]
root-crate = ["bomboni_request_derive/root-crate"]
testing = []
derive = []
tonic = ["bomboni_proto/tonic", "dep:tonic"]
wasm = [
  "dep:bomboni_wasm",
  "bomboni_common/wasm",
  "bomboni_proto/wasm",
  "dep:wasm-bindgen",
  "dep:js-sys",
  "time/wasm-bindgen",
]
postgres = ["dep:postgres-types", "dep:bytes", "bomboni_common/postgres"]
mysql = ["dep:mysql_common"]

[dependencies]
bomboni_common = { path = "../bomboni_common" }
bomboni_proto = { path = "../bomboni_proto" }
bomboni_request_derive = { path = "../bomboni_request_derive" }
bomboni_macros = { path = "../bomboni_macros" }
bomboni_wasm = { path = "../bomboni_wasm", features = ["derive"], optional = true }

thiserror.workspace = true
prost.workspace = true
rand_core = "0.6.4" # must be older version due to incompatibility
regex.workspace = true
itertools.workspace = true
time.workspace = true
serde = { workspace = true, features = ["derive"] }
pest = "2.8.3"
pest_derive = "2.8.3"
base64ct = { version = "1.8.0", features = ["alloc"] }
aes-gcm = { version = "0.10.3", features = ["alloc"] }
blake2 = "0.10.6"
rsa = { version = "0.9.8", features = ["sha2"] }

tonic = { workspace = true, optional = true }
postgres-types = { workspace = true, features = [
  "with-time-0_3",
], optional = true }
bytes = { workspace = true, optional = true }
mysql_common = { workspace = true, features = ["time"], optional = true }

[target.'cfg(all(target_family = "wasm", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
wasm-bindgen = { version = "0.2.105", optional = true }
js-sys = { version = "0.3.82", optional = true }

[dev-dependencies]
serde_json.workspace = true
