[package]
name = "bomboni_request"
version.workspace = true
authors.workspace = true
description = "Utilities for working with API requests. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni_request"
path = "src/lib.rs"

[features]
root-crate = ["bomboni_request_derive/root-crate"]
testing = []
derive = []
tonic = ["bomboni_proto/tonic", "dep:tonic"]
wasm = [
  "dep:bomboni_wasm",
  "bomboni_common/wasm",
  "bomboni_proto/wasm",
  "dep:wasm-bindgen",
  "dep:js-sys",
  "time/wasm-bindgen",
]
postgres = ["dep:postgres-types", "dep:bytes", "bomboni_common/postgres"]
mysql = ["dep:mysql_common"]

[dependencies]
bomboni_common = { workspace = true }
bomboni_proto = { workspace = true }
bomboni_request_derive = { workspace = true }
bomboni_macros = { workspace = true }
bomboni_wasm = { workspace = true, features = ["derive"], optional = true }

thiserror.workspace = true
prost.workspace = true
rand_core = "0.6.4" # must be older version due to incompatibility
regex.workspace = true
itertools.workspace = true
time.workspace = true
serde = { workspace = true, features = ["derive"] }
pest = "2.8.6"
pest_derive = "2.8.6"
base64ct = { version = "1.8.3", features = ["alloc"] }
aes-gcm = { version = "0.10.3", features = ["alloc"] }
blake2 = "0.10.6"
rsa = { version = "0.9.10", features = ["sha2"] }

tonic = { workspace = true, optional = true }
postgres-types = { workspace = true, features = [
  "with-time-0_3",
], optional = true }
bytes = { workspace = true, optional = true }
mysql_common = { workspace = true, features = ["time"], optional = true }

[target.'cfg(all(target_family = "wasm", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
wasm-bindgen = { version = "0.2.108", optional = true }
js-sys = { version = "0.3.85", optional = true }

[dev-dependencies]
serde_json.workspace = true
