[package]
name = "bomboni_request_derive"
version = "0.1.61"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Internal request derive macros for Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_request_derive"
path = "src/lib.rs"
proc-macro = true

[features]
root-crate = []

[dependencies]
bomboni_core = { workspace = true }

proc-macro2 = { workspace = true, features = ["proc-macro"] }
syn.workspace = true
quote.workspace = true
darling.workspace = true
