[package]
name = "bomboni_serde"
version.workspace = true
authors.workspace = true
description = "Serde utilities."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni_serde"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
