[package]
name = "bomboni_template"
version = "0.1.60"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Utilities for working Handlebars templates. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_template"
path = "src/lib.rs"

[features]
default = ["testing"]
testing = []

[dependencies]
bomboni_common = { path = "../bomboni_common", version = "0.1.60" }
bomboni_proto = { version = "0.1.60", path = "../bomboni_proto" }

thiserror = "1.0.63"
handlebars = "6.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
convert_case = "0.6.0"
