[package]
name = "bomboni_template"
version = "0.1.61"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Utilities for working Handlebars templates. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_template"
path = "src/lib.rs"

[features]
default = ["testing"]
testing = []

[dependencies]
bomboni_common = { workspace = true }
bomboni_proto = { workspace = true }

thiserror.workspace = true
handlebars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
convert_case.workspace = true
