[package]
name = "bomboni_template"
version.workspace = true
authors.workspace = true
description = "Utilities for working Handlebars templates. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "README.md"
edition.workspace = true

[lib]
name = "bomboni_template"
path = "src/lib.rs"

[features]
testing = []

[dependencies]
bomboni_proto = { path = "../bomboni_proto" }

handlebars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
convert_case.workspace = true
