[package]
name = "bomboni_wasm"
version = "0.1.60"
authors = ["Tin Rabzelj <tin@flinect.com>"]
description = "Utilities for working with WASM. Part of Bomboni library."
repository = "https://github.com/tinrab/bomboni"
homepage = "https://github.com/tinrab/bomboni"
license-file = "../LICENSE"
readme = "../README.md"
edition = "2021"

[lib]
name = "bomboni_wasm"
path = "src/lib.rs"

[features]
derive = ["dep:bomboni_wasm_derive"]
js = ["bomboni_wasm_core/js"]

[dependencies]
bomboni_wasm_core = { path = "../bomboni_wasm_core", version = "0.1.60" }
bomboni_wasm_derive = { path = "../bomboni_wasm_derive", version = "0.1.60", optional = true }

serde = "1.0.204"
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
